# Hydra-Worm

./: .dockerignore  .gitignore  Firewall.txt  Makefile  README.md  go.mod
hydra-agent/: Cargo.toml
hydra-agent/src/: main.rs
hydra-c2/: go.mod  go.sum  main.go
lab/: Dockerfile.agent  Dockerfile.c2  docker-compose.yml
