[package]
name = "hydra-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP/S Transport (Tier 2)
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }

# Serialization & Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Evasion & Entropy
rand = "0.8"
rand_distr = "0.4"

# Low-Level Networking (Tier 4 - ICMP)
pnet = "0.34.0"

# Encoding for DNS Tunneling (Tier 6)
base64 = "0.21"