[package]
name = "hydra-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# Force a standalone, static OpenSSL build to bypass Alpine's linker issues
openssl = { version = "0.10", features = ["vendored"] }

# HTTP/S Transport
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Serialization & Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Evasion & Entropy
rand = "0.8"
rand_distr = "0.4"

# Low-Level Networking
pnet = "0.34.0"

# Encoding & System Info
base64 = "0.21"
sysinfo = "0.37.2"

[target.x86_64-unknown-linux-musl]
linker = "musl-gcc"